--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 <div class="viewport" id="viewport">
     <div class="card"><div class="window"><h2>だれと あそぶ？</h2><div class="inventory-grid"><div class="item-chip" onpointerup="quickSave(1, 'ひとり')">ひとり</div><div class="item-chip" onpointerup="quickSave(1, '彼女と2人')">彼女</div><div class="item-chip" onpointerup="quickSave(1, '友達(2-4人)')">友達</div> <div class="item-chip" onpointerup="quickSave(1, '友達(大人数)')">友達(大人数)</div><div class="item-chip" onpointerup="quickSave(1, '会社')">会社</div><div class="item-chip" onpointerup="quickSave(1, '家族')">家族</div></div><div class="free-input-wrapper"><input type="text" id="q1_free" class="free-input" placeholder="そのほか..." onkeydown="if(event.key==='Enter') save(1, this.value)"><button class="btn-dot-ok" onpointerup="save(1, document.getElementById('q1_free').value)"><div class="pixel-check"></div></button></div></div></div>
-    <div class="card"><div class="window"><h2>なにを したい？</h2><div class="inventory-grid" id="q2_grid"><div class="item-chip" onpointerup="toggleItem(this, 'モーニング')">モーニング</div><div class="item-chip" onpointerup="toggleItem(this, 'ランチ')">ランチ</div><div class="item-chip" onpointerup="toggleItem(this, 'カフェ')">カフェ</div><div class="item-chip" onpointerup="toggleItem(this, 'ディナー')">ディナー</div><div class="item-chip" onpointerup="toggleItem(this, 'バータイム')">バータイム</div><div class="item-chip" onpointerup="toggleItem(this, '深夜')">深夜</div><div class="item-chip" onpointerup="toggleItem(this, 'パン')">パン</div><div class="item-chip" onpointerup="toggleItem(this, 'スイーツ')">スイーツ</div><div class="item-chip" onpointerup="toggleItem(this, '遊び')">遊び</div><div class="item-chip" onpointerup="toggleItem(this, 'のんびり')">のんびり</div></div><input type="text" id="q2_free" class="free-input" placeholder="そのほか入力..."><button class="btn-main" onpointerup="nextMulti()">これでいく！</button></div></div>
+    <div class="card"><div class="window"><h2>なにを したい？</h2><div class="inventory-grid" id="q2_grid"><div class="item-chip" onpointerup="toggleItem(this, 'モーニング')">モーニング</div><div class="item-chip" onpointerup="toggleItem(this, 'ランチ')">ランチ</div><div class="item-chip" onpointerup="toggleItem(this, 'カフェ')">カフェ</div><div class="item-chip" onpointerup="toggleItem(this, 'ディナー')">ディナー</div><div class="item-chip" onpointerup="toggleItem(this, 'バータイム')">バータイム</div><div class="item-chip" onpointerup="深夜">深夜</div><div class="item-chip" onpointerup="toggleItem(this, 'パン')">パン</div><div class="item-chip" onpointerup="toggleItem(this, 'スイーツ')">スイーツ</div><div class="item-chip" onpointerup="toggleItem(this, '遊び')">遊び</div><div class="item-chip" onpointerup="toggleItem(this, 'のんびり')">のんびり</div></div><input type="text" id="q2_free" class="free-input" placeholder="そのほか入力..."><button class="btn-main" onpointerup="nextMulti()">これでいく！</button></div></div>
     <div class="card"><div class="window"><h2>どこへ むかう？</h2><div class="inventory-grid"><div class="item-chip" id="gps-btn" onpointerup="getPreciseLocation(3)">現在地</div><div class="item-chip" onpointerup="quickSave(3, '本通周辺')">本通周辺</div><div class="item-chip" onpointerup="quickSave(3, '広島駅')">広島駅</div><div class="item-chip" style="background: rgba(103, 163, 139, 0.1); border: 1px dashed var(--accent-green);" onpointerup="openMap(3)">地図を開く</div></div><div class="free-input-wrapper"><input type="text" id="q3_free" class="free-input" placeholder="場所・住所..." onkeydown="if(event.key==='Enter') save(3, this.value)"><button class="btn-dot-ok" onpointerup="save(3, document.getElementById('q3_free').value)"><div class="pixel-check"></div></button></div></div></div>
     <div class="card"><div class="window"><h2>いつ いく？</h2><div class="slot-container" id="slot4"><div class="slot-reel"></div><div class="slot-overlay"></div></div><div class="free-input-wrapper"><input type="text" id="q4_free" class="free-input" placeholder="自由指定..." onkeydown="if(event.key==='Enter') saveSlot(4)"><button class="btn-dot-ok" onpointerup="saveSlot(4)"><div class="pixel-check"></div></button></div></div></div>
     <div class="card"><div class="window"><h2>よさんは？</h2><div class="slot-container" id="slot5"><div class="slot-reel"></div><div class="slot-overlay"></div></div><button class="btn-main" onpointerup="saveSlot(5)">この予算で！</button></div></div>
@@ -268,7 +268,7 @@
                     x: Math.random() * canvas.width,
                     y: Math.random() * (canvas.height * 0.35),
                     s: Math.random() * 0.3 + 0.15,
-                    w: Math.random() * 40 + 60 
+                    w: Math.random() * 80 + 70 // 少し大きめ、かつランダム幅を拡大
                 });
             }
         }
@@ -293,20 +293,18 @@
                 const drawPixelCloud = (x, y, baseW) => {
                     const h = baseW * 0.6;
                     const blocks = [
-                        { dx: 0, dy: 0, bw: 1.0, bh: 0.4 },      // 中段
-                        { dx: 0.1, dy: -0.2, bw: 0.8, bh: 0.6 }, // 上段
-                        { dx: 0.25, dy: -0.4, bw: 0.5, bh: 0.8 },// 頂点
-                        { dx: 0.15, dy: 0.15, bw: 0.7, bh: 0.35 },// 下段中央
-                        { dx: 0.05, dy: 0.05, bw: 0.3, bh: 0.3 }  // 下段左
+                        { dx: 0, dy: 0, bw: 1.0, bh: 0.4 },      
+                        { dx: 0.1, dy: -0.2, bw: 0.8, bh: 0.6 }, 
+                        { dx: 0.25, dy: -0.4, bw: 0.5, bh: 0.8 },
+                        { dx: 0.15, dy: 0.15, bw: 0.7, bh: 0.35 },
+                        { dx: 0.05, dy: 0.05, bw: 0.3, bh: 0.3 }  
                     ];
                     
-                    // 影の描画
                     ctx.fillStyle = 'rgba(0,0,0,0.2)';
                     blocks.forEach(b => {
                         ctx.fillRect(x + b.dx * baseW + 3, y + b.dy * h + 3, b.bw * baseW, b.bh * h);
                     });
                     
-                    // 本体（ドラクエ風ドットの組み合わせ）
                     ctx.fillStyle = 'white';
                     blocks.forEach(b => {
                         ctx.fillRect(x + b.dx * baseW, y + b.dy * h, b.bw * baseW, b.bh * h);
@@ -314,7 +312,11 @@
                 };
                 drawPixelCloud(p.x, p.y, p.w);
                 p.x += p.s;
-                if (p.x > canvas.width) { p.x = -p.w * 1.5; p.y = Math.random() * (canvas.height * 0.35); }
+                if (p.x > canvas.width) { 
+                    p.x = -p.w * 1.5; 
+                    p.y = Math.random() * (canvas.height * 0.35);
+                    p.w = Math.random() * 80 + 70; // 再出現時にサイズを再ランダム化
+                }
             });
         }
         requestAnimationFrame(animate);
