--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         * { 
             -webkit-tap-highlight-color: transparent; 
             touch-action: pan-x pan-y;
+            box-sizing: border-box;
         }
 
         body, html { 
@@ -30,7 +31,7 @@
             font-family: 'DotGothic16', sans-serif; 
             color: var(--text-dark); 
             overflow: hidden; 
-            position: fixed;
+            position: fixed; /* iPhoneのスクロールバウンス防止 */
             overscroll-behavior: none;
             background-color: var(--sky-blue);
         }
@@ -40,10 +41,16 @@
             user-select: text !important; 
         }
 
+        /* 背景設定の修正：iPhoneのツールバー変化に対応 */
         .sky-bg { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+            position: fixed; 
+            top: -5%; /* 上のズレをカバー */
+            left: 0; 
+            width: 100%; 
+            height: 110%; /* 下の隙間をカバー */
             z-index: -2; 
             background-color: transparent;
+            pointer-events: none;
         }
 
         #effect-canvas {
@@ -51,11 +58,11 @@
             z-index: -1; pointer-events: none;
         }
 
-        .bg-settings { position: fixed; bottom: 20px; right: 20px; z-index: 10000; }
+        .bg-settings { position: fixed; bottom: calc(20px + env(safe-area-inset-bottom)); right: 20px; z-index: 10000; }
         .bg-btn { width: 44px; height: 44px; border: none; background: none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); transition: transform 0.1s; font-family: inherit; display: flex; align-items: center; justify-content: center; }
         .bg-btn:active { transform: translateY(4px); text-shadow: 0 0 0 rgba(0,0,0,0); }
 
-        .btn-back { position: fixed; bottom: 20px; left: 15px; border: none; background: none; width: 44px; height: 44px; z-index: 1001; display:none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); font-family: inherit; align-items: center; justify-content: center; transition: transform 0.1s; }
+        .btn-back { position: fixed; bottom: calc(20px + env(safe-area-inset-bottom)); left: 15px; border: none; background: none; width: 44px; height: 44px; z-index: 1001; display:none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); font-family: inherit; align-items: center; justify-content: center; transition: transform 0.1s; }
         .btn-back:active { transform: translateY(4px); text-shadow: 0 0 0 rgba(0,0,0,0); }
         
         .bg-panel { 
@@ -110,7 +117,8 @@
             background: var(--cloud-white); backdrop-filter: blur(12px); 
             border-radius: 20px; padding: 20px; width: 100%; max-width: 320px; 
             text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6); 
-            height: 360px; display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
+            height: 380px; /* iPhoneで見やすいよう少し調整 */
+            display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
             margin-top: env(safe-area-inset-top);
         }
 
@@ -209,6 +217,7 @@
 </div>
 
 <script>
+    // iPhoneのバウンスと不要なスクロールを完全に抑制
     document.addEventListener('touchmove', function(e) {
         if (!e.target.closest('.inventory-grid') && !e.target.closest('textarea') && !e.target.closest('#summary')) {
             e.preventDefault();
@@ -337,7 +346,8 @@
             bg.style.backgroundImage = 'none'; 
             currentBGValue = '#a3c1da';
         } else if (val.startsWith('data:image')) { 
-            bg.style.background = `url(${val}) center / cover no-repeat fixed`; 
+            // iOS Safari向けにbackground-attachment: scrollで挙動を安定させる
+            bg.style.background = `url(${val}) center / cover no-repeat scroll`; 
         } else { 
             document.body.style.backgroundColor = val;
             document.documentElement.style.backgroundColor = val;
@@ -362,7 +372,6 @@
     function saveToSelectedPreset() {
         if (!selectedPresetId) return alert("保存先の○をえらんでね！");
         
-        // Pixel対応: 保存時に確実に現在の状態を確定させる
         const dot = document.getElementById(selectedPresetId);
         const currentToSave = currentBGValue;
 
