--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             --accent-green: #67a38b;
             --text-dark: #4a5568;
             --shadow: 0 8px 30px rgba(0,0,0,0.12);
+            --window-opacity: 0.9; /* 透明度変数を追加 */
         }
 
         * { 
@@ -31,7 +32,7 @@
             font-family: 'DotGothic16', sans-serif; 
             color: var(--text-dark); 
             overflow: hidden; 
-            position: fixed; /* iPhoneのスクロールバウンス防止 */
+            position: fixed;
             overscroll-behavior: none;
             background-color: var(--sky-blue);
         }
@@ -41,13 +42,12 @@
             user-select: text !important; 
         }
 
-        /* 背景設定の修正：iPhoneのツールバー変化に対応 */
         .sky-bg { 
             position: fixed; 
-            top: -5%; /* 上のズレをカバー */
+            top: -5%;
             left: 0; 
             width: 100%; 
-            height: 110%; /* 下の隙間をカバー */
+            height: 110%;
             z-index: -2; 
             background-color: transparent;
             pointer-events: none;
@@ -97,6 +97,13 @@
         }
         .btn-panel-dark:active { box-shadow: 0 0 0 #222 !important; }
 
+        /* 透明度スライダーのスタイル追加 */
+        .opacity-slider-row {
+            background: rgba(0,0,0,0.05); padding: 8px; border-radius: 10px; margin-bottom: 8px; font-size: 0.8rem;
+        }
+        .opacity-slider-row span { display: block; margin-bottom: 5px; }
+        .opacity-input { width: 100%; cursor: pointer; accent-color: var(--accent-orange); }
+
         .effect-switch-row {
             display: flex; align-items: center; justify-content: space-between;
             background: rgba(0,0,0,0.05); padding: 8px; border-radius: 10px; margin-bottom: 8px;
@@ -114,10 +121,11 @@
         .card { min-width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 15px; box-sizing: border-box; }
         
         .window { 
-            background: var(--cloud-white); backdrop-filter: blur(12px); 
+            background: rgba(255, 255, 255, var(--window-opacity)); /* 変数を適用 */
+            backdrop-filter: blur(12px); 
             border-radius: 20px; padding: 20px; width: 100%; max-width: 320px; 
             text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6); 
-            height: 380px; /* iPhoneで見やすいよう少し調整 */
+            height: 380px; 
             display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
             margin-top: env(safe-area-inset-top);
         }
@@ -182,6 +190,11 @@
         </div>
         
         <div class="custom-color-wrapper">
+            <div class="opacity-slider-row">
+                <span>ウィンドウの透明度</span>
+                <input type="range" class="opacity-input" id="opacity-slider" min="0" max="100" value="90" oninput="updateOpacity(this.value)">
+            </div>
+
             <div class="effect-switch-row">
                 <span>エフェクト</span>
                 <input type="checkbox" id="effect-toggle" class="switch-input" onchange="toggleEffect(this.checked)">
@@ -217,7 +230,6 @@
 </div>
 
 <script>
-    // iPhoneのバウンスと不要なスクロールを完全に抑制
     document.addEventListener('touchmove', function(e) {
         if (!e.target.closest('.inventory-grid') && !e.target.closest('textarea') && !e.target.closest('#summary')) {
             e.preventDefault();
@@ -336,6 +348,13 @@
         if (p.style.display === 'block') p.style.display = 'none';
     }
 
+    // 透明度更新関数
+    function updateOpacity(val) {
+        const opacity = val / 100;
+        document.documentElement.style.setProperty('--window-opacity', opacity);
+        localStorage.setItem('sora_window_opacity', val);
+    }
+
     function applyBG(val) { 
         if(!val) return; 
         currentBGValue = val;
@@ -346,7 +365,6 @@
             bg.style.backgroundImage = 'none'; 
             currentBGValue = '#a3c1da';
         } else if (val.startsWith('data:image')) { 
-            // iOS Safari向けにbackground-attachment: scrollで挙動を安定させる
             bg.style.background = `url(${val}) center / cover no-repeat scroll`; 
         } else { 
             document.body.style.backgroundColor = val;
@@ -406,6 +424,13 @@
         const effectStored = localStorage.getItem('sora_effect_enabled') === 'true';
         document.getElementById('effect-toggle').checked = effectStored;
         if(effectStored) toggleEffect(true);
+
+        // 透明度の復元
+        const savedOpacity = localStorage.getItem('sora_window_opacity');
+        if (savedOpacity !== null) {
+            document.getElementById('opacity-slider').value = savedOpacity;
+            updateOpacity(savedOpacity);
+        }
 
         [4, 5].forEach(n => {
             const reel = document.querySelector(`#slot${n} .slot-reel`);
