--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         body, html { 
             margin: 0; padding: 0; 
             height: 100%; width: 100%;
-            /* iOS Safariの高さズレ対策 */
             height: 100dvh;
             font-family: 'DotGothic16', sans-serif; 
             color: var(--text-dark); 
             overflow: hidden; 
             position: fixed;
+            /* iPhoneのズレ防止用 */
             top: 0; left: 0; right: 0; bottom: 0;
             overscroll-behavior: none;
             background-color: var(--sky-blue);
@@ -45,9 +45,9 @@
             user-select: text !important; 
         }
 
-        /* 背景画像を全体に表示する修正 */
         .sky-bg { 
             position: fixed; 
+            /* 全体表示に修正 */
             top: 0;
             left: 0; 
             width: 100%; 
@@ -132,9 +132,8 @@
             text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6); 
             height: 380px; 
             display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
-            /* iPhoneのノッチ対策 */
             margin-top: calc(env(safe-area-inset-top) / 2);
-            text-shadow: var(--dynamic-text-shadow);
+            text-shadow: var(--dynamic-text-shadow); 
         }
 
         h2 { font-size: 1.0rem; margin-top: 0; margin-bottom: 10px; }
@@ -238,7 +237,6 @@
 </div>
 
 <script>
-    // iOSのスクロールバウンス防止
     document.addEventListener('touchmove', function(e) {
         if (!e.target.closest('.inventory-grid') && !e.target.closest('textarea') && !e.target.closest('#summary')) {
             e.preventDefault();
@@ -376,7 +374,7 @@
             bg.style.backgroundImage = 'none'; 
             currentBGValue = '#a3c1da';
         } else if (val.startsWith('data:image')) { 
-            bg.style.background = `url(${val}) center / cover no-repeat fixed`; 
+            bg.style.background = `url(${val}) center / cover no-repeat scroll`; 
         } else { 
             document.body.style.backgroundColor = val;
             document.documentElement.style.backgroundColor = val;
@@ -537,7 +535,8 @@
         navigator.clipboard.writeText(text).then(() => {
             const btn = document.getElementById('btn-finish');
             btn.innerText = "よみこみちゅう・・・"; btn.classList.add('success');
-            setTimeout(() => { window.location.href = "https://gemini.google.com/"; }, ACTION_DELAY + 500);
+            // Geminiアプリを優先起動するURL
+            setTimeout(() => { window.location.href = "https://gemini.google.com/app"; }, ACTION_DELAY + 500);
         });
     }
     initSlots();
