--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
             z-index: -1; pointer-events: none;
         }
 
-        .bg-settings { position: fixed; bottom: calc(20px + env(safe-area-inset-bottom)); right: 20px; z-index: 10000; }
+        /* 修正箇所：iPhoneの浮き上がりを抑えるため、ベースを10pxに下げ、セーフエリアを付与 */
+        .bg-settings { position: fixed; bottom: calc(10px + env(safe-area-inset-bottom)); right: 20px; z-index: 10000; }
         .bg-btn { width: 44px; height: 44px; border: none; background: none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); transition: transform 0.1s; font-family: inherit; display: flex; align-items: center; justify-content: center; }
         .bg-btn:active { transform: translateY(4px); text-shadow: 0 0 0 rgba(0,0,0,0); }
 
-        .btn-back { position: fixed; bottom: calc(20px + env(safe-area-inset-bottom)); left: 15px; border: none; background: none; width: 44px; height: 44px; z-index: 1001; display:none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); font-family: inherit; align-items: center; justify-content: center; transition: transform 0.1s; }
+        /* 修正箇所：こちらも同様にベースを10pxに下げ、横位置を調整 */
+        .btn-back { position: fixed; bottom: calc(10px + env(safe-area-inset-bottom)); left: 15px; border: none; background: none; width: 44px; height: 44px; z-index: 1001; display:none; cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.2); font-family: inherit; align-items: center; justify-content: center; transition: transform 0.1s; }
         .btn-back:active { transform: translateY(4px); text-shadow: 0 0 0 rgba(0,0,0,0); }
         
         .bg-panel { 
