--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             touch-action: pan-x pan-y;
         }
 
-        /* 修正箇所: iPhoneの高さ問題を強制リセット */
         body, html { 
             margin: 0; padding: 0; 
             width: 100vw;
-            height: 100vh; /* フォールバック */
-            height: -webkit-fill-available; /* iOS用の特殊な高さ指定 */
+            height: 100vh;
+            height: -webkit-fill-available;
             font-family: 'DotGothic16', sans-serif; 
             color: var(--text-dark); 
             overflow: hidden; 
@@ -43,13 +42,19 @@
             user-select: text !important; 
         }
 
-        /* 修正箇所: 背景を画面いっぱいに強制 */
+        /* 修正箇所: 画像背景がiPhoneのツールバーで伸縮・ズレないよう、ビューポート基準で固定 */
         .sky-bg { 
             position: fixed; 
-            top: 0; left: 0; right: 0; bottom: 0;
-            width: 100%; height: 100%; 
+            top: 0; left: 0; 
+            width: 100vw; 
+            height: 100vh; /* ブラウザバーを含めた全領域 */
+            height: -webkit-fill-available; 
             z-index: -2; 
             background-color: transparent;
+            /* 画像が設定された際の挙動を改善 */
+            background-attachment: scroll; 
+            background-size: cover;
+            background-position: center center;
         }
 
         #effect-canvas {
@@ -117,7 +122,6 @@
             border-radius: 20px; padding: 20px; width: 100%; max-width: 320px; 
             text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6); 
             height: 360px; display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
-            /* 修正箇所: 見切れるのを防ぐためにenvをpadding-topに変更 */
             padding-top: calc(20px + env(safe-area-inset-top)); 
         }
 
@@ -216,7 +220,6 @@
 </div>
 
 <script>
-    /* 修正箇所: スクロール無効化の範囲を限定 */
     document.addEventListener('touchmove', function(e) {
         if (!e.target.closest('.inventory-grid') && !e.target.closest('textarea') && !e.target.closest('#summary') && !e.target.closest('.slot-container')) {
             e.preventDefault();
@@ -335,6 +338,7 @@
         if (p.style.display === 'block') p.style.display = 'none';
     }
 
+    /* 修正箇所: 画像背景の適用方法を改善 */
     function applyBG(val) { 
         if(!val) return; 
         currentBGValue = val;
@@ -345,7 +349,10 @@
             bg.style.backgroundImage = 'none'; 
             currentBGValue = '#a3c1da';
         } else if (val.startsWith('data:image')) { 
-            bg.style.background = `url(${val}) center / cover no-repeat fixed`; 
+            // 画像の場合は背景色を一旦リセットして画像に集中させる
+            bg.style.background = `url(${val}) center center / cover no-repeat fixed`; 
+            // iOS Safariの固定背景バグ対策として、別途backgroundColorも設定しておく
+            document.body.style.backgroundColor = 'transparent';
         } else { 
             document.body.style.backgroundColor = val;
             document.documentElement.style.backgroundColor = val;
