--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
             --shadow: 0 8px 30px rgba(0,0,0,0.12);
         }
 
-        * { 
-            -webkit-tap-highlight-color: transparent; 
-            touch-action: pan-x pan-y;
-        }
-
-        /* 修正箇所：htmlとbody自体に背景設定を移譲し、隙間を根絶 */
-        body, html { 
+        /* 修正箇所：全レイヤーで背景を固定 */
+        html, body { 
             margin: 0; padding: 0; 
             height: 100%; width: 100%;
             height: 100dvh;
@@ -33,10 +28,16 @@
             overflow: hidden; 
             position: fixed;
             overscroll-behavior: none;
-            background-color: var(--sky-blue);
             background-size: cover;
-            background-position: center;
+            background-position: center center;
+            background-repeat: no-repeat;
             background-attachment: fixed;
+            background-color: var(--sky-blue);
+        }
+
+        * { 
+            -webkit-tap-highlight-color: transparent; 
+            touch-action: pan-x pan-y;
         }
 
         input, textarea { 
@@ -53,7 +54,7 @@
             z-index: -2; 
             background-color: transparent;
             background-size: cover;
-            background-position: center;
+            background-position: center center;
             background-repeat: no-repeat;
         }
 
@@ -338,28 +339,30 @@
         if (p.style.display === 'block') p.style.display = 'none';
     }
 
-    /* 修正箇所：applyBG関数で、常にhtml/body側も同期させるよう変更 */
+    /* 修正箇所：applyBGでhtml, body, sky-bgのすべてに背景を強制同期 */
     function applyBG(val) { 
         if(!val) return; 
         currentBGValue = val;
         const bg = document.getElementById('sky-bg'); 
+        const els = [document.documentElement, document.body, bg];
+
         if (val === 'default') { 
-            document.body.style.backgroundColor = '#a3c1da';
-            document.documentElement.style.backgroundColor = '#a3c1da';
-            document.body.style.backgroundImage = 'none';
-            bg.style.backgroundImage = 'none'; 
+            els.forEach(el => {
+                el.style.backgroundColor = '#a3c1da';
+                el.style.backgroundImage = 'none';
+            });
             currentBGValue = '#a3c1da';
         } else if (val.startsWith('data:image')) { 
             const url = `url(${val})`;
-            bg.style.backgroundImage = url; 
-            document.body.style.backgroundImage = url; // 予備としてbodyにも設定
-            document.body.style.backgroundColor = 'transparent';
-            document.documentElement.style.backgroundColor = 'transparent';
+            els.forEach(el => {
+                el.style.backgroundImage = url;
+                el.style.backgroundColor = 'transparent';
+            });
         } else { 
-            document.body.style.backgroundColor = val;
-            document.documentElement.style.backgroundColor = val;
-            document.body.style.backgroundImage = 'none';
-            bg.style.backgroundImage = 'none'; 
+            els.forEach(el => {
+                el.style.backgroundColor = val;
+                el.style.backgroundImage = 'none';
+            });
         } 
         localStorage.setItem('sora_bg_v7_solid', val); 
     }
