--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
             --shadow: 0 8px 30px rgba(0,0,0,0.12);
         }
 
-        /* 修正箇所：html/bodyの基準を「画面の底辺」に完全に固定する */
+        /* 修正箇所：OSレベルの「遊び」を背景色で同化させる */
         html {
             height: 100%;
             overflow: hidden;
-            background-color: var(--sky-blue);
+            background-color: var(--sky-blue); /* 余白ができてもこの色が漏れるようにする */
+            position: fixed;
+            width: 100%;
         }
 
         body { 
             margin: 0; padding: 0; 
-            height: 100vh; /* 固定の高さ */
-            height: -webkit-fill-available; /* Safari用の全画面補完 */
+            height: 100dvh; /* 動的ビューポート */
             width: 100vw;
             font-family: 'DotGothic16', sans-serif; 
             color: var(--text-dark); 
             overflow: hidden; 
             position: fixed; 
-            top: 0; left: 0; bottom: 0; right: 0; /* 四隅を完全に接着 */
-            overscroll-behavior: none;
+            top: 0; left: 0;
+            overscroll-behavior-y: none; /* 下方向の引っ張りを禁止 */
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            background-color: var(--sky-blue);
         }
 
         * { 
@@ -52,10 +54,13 @@
             user-select: text !important; 
         }
 
-        /* 背景レイヤー：最下部まで確実に色を届かせる */
+        /* 背景レイヤー：最下部を超えて10%分余分に色を伸ばす（保険） */
         .sky-bg { 
             position: absolute; 
-            top: 0; left: 0; right: 0; bottom: 0; /* 1pxの隙間も許さない */
+            top: 0; 
+            left: 0; 
+            width: 100%; 
+            height: 110%; 
             z-index: -2; 
             background-color: transparent;
             background-size: cover;
